userとprojectのドキュメント追加
